[package]
name = "blockchain"
version = "0.1.0"
authors = ["Jeff Smith <jffreyjs@gmail.com>"]

[dependencies]
ring = "0.11.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
data-encoding = "2.1.1"
byteorder = "1.2.1"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
uuid = { version = "0.6.0", features = ["v4"] }
